--- a/App1/App1.Droid/packages.config
+++ b/App1/App1.Droid/packages.config
@@ -5,5 +5,10 @@
   <package id="Xamarin.Android.Support.v7.AppCompat" version="23.0.1.3" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v7.CardView" version="23.0.1.3" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.0.1.3" targetFramework="monoandroid60" />
-  <package id="Xamarin.Forms" version="2.0.0.6482" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.0.1.3" targetFramework="monoandroid60" />
+  <package id="Xamarin.Forms" version="2.1.0.6529" targetFramework="monoandroid60" />
+  <package id="Xamarin.Forms.Maps" version="2.1.0.6529" targetFramework="monoandroid60" />
+  <package id="Xamarin.GooglePlayServices.Base" version="27.0.0.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.GooglePlayServices.Basement" version="27.0.0.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.GooglePlayServices.Maps" version="26.0.0.0" targetFramework="monoandroid60" />
 </packages>
